(library
 (name seqcode_lib)
 (public_name zrun.seqcode_lib)
 (wrapped false)
 (modules
  obc ; the AST for representing Mealy machines
  oaux ; auxiliary functions for building terms
  oprinter ; the printer
  ocamlprinter ; print OCaml code
  )
 (libraries zelus.compat zrun.global_lib typdefs_lib)
 (flags
  (:standard -open Zelus_compat -open Global_lib)))
